fix: mobile navigation filter options cutoff

--- a/src/components/NavigationFilter/NavigationFilter.module.scss
+++ b/src/components/NavigationFilter/NavigationFilter.module.scss
@@ -128,6 +128,7 @@
 		width: 100%;
 		margin-inline: auto;
 		padding-inline-start: 0;
+		overflow: visible;
 
 		&[aria-expanded="true"] {
 			max-width: 100%;
